2007-06-21  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        Some more work on the implementation of FontQt.

        * platform/qt/FontQt.cpp:
        (WebCore::Font::Font):
        (WebCore::Font::~Font):
        (WebCore::Font::operator=):

2007-06-21  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        Started work on the new font infrastructure for the Qt port.

        * WebCore.pro:
        * editing/Editor.cpp:
        (WebCore::Editor::fontForSelection):
        * platform/Font.h:
        (WebCore::Font::treatAsSpace):
        (WebCore::Font::treatAsZeroWidthSpace):
        (WebCore::Font::isRoundingHackCharacter):
        * platform/qt/FontQt.cpp:
        (WebCore::Font::operator QFont):
        * platform/qt/TemporaryLinkStubs.cpp:

2007-06-21  Adam Roben  <aroben@apple.com>

        More Gdk build fixes.

        * page/gdk/ContextMenuClientGdk.cpp:
        (WebCore::ContextMenuClientGdk::shouldIncludeInspectElementItem):
        * page/gdk/ContextMenuClientGdk.h:
        * platform/gdk/TemporaryLinkStubs.cpp:

2007-06-21  Adam Roben  <aroben@apple.com>

        Speculative Gdk build fix.

        * page/InspectorController.h: Only include the JS headers we really
        need to avoid pulling in ones like JSStringRefCF.h.

2007-06-20  Adam Roben  <aroben@apple.com>

        Speculative Gdk build fix.

        * WebCore.pro: Don't try to build WebKitQt/Plugins on Gdk.

2007-06-20  Adam Roben  <aroben@apple.com>

        Windows build fix.

        * WebCore.vcproj/WebCore.vcproj: Include ForwardingHeaders after
        everything but $WebKitLibrariesDir so that we will pick up
        JavaScriptCore headers directly.

2007-06-15  George Staikos  <staikos@kde.org>

        Add missing symbol.

        * platform/qt/TemporaryLinkStubs.cpp:
        (WebCore::contextMenuItemTagInspectElement):

2007-06-20  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Maciej, Anders.
        